# todo-capital

./: .gitignore  README.md  makefile  pyproject.toml
src/config/: settings.py  urls.py
src/p_apps/a_auth/: apps.py
src/p_apps/a_todo/: apps.py  models.py  serializers.py  urls.py  views.py
src/p_apps/a_todo/migrations/: 0001_initial.py  0002_rename_desc_todos_description.py
