[tool.poetry]
name = "capital-todo-api-v1"
version = "0.1.0"
description = "List of Todo's List for Capital Branch tech Interview"
authors = ["Carlos. APT <carlospt_dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "^5.0.6"
djangorestframework = "^3.15.1"
dj-rest-auth = {extras = ["with-social"], version = "^6.0.0"}
django-allauth = "0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
